2014-07-09  Ramon Casero  <rcasero@gmail.com>

	* CardiacToolbox/blockface_create_masks.m (0.1.1)

	- Fix bug. We need a wait() to that user can reposition or modify
	the ellipse and polygon.

	* Add CardiacToolbox/blockface_create_masks.m (0.1.0)

	- BLOCKFACE_CREATE_MASK User interface to create the elliptical
	and polygonal segmentation masks used to correct blockface
	illumination.

2014-06-24  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/tri_sphparam.m (0.4.2)

	- Add option sphparam_opts.AllInnerVerticesAreFree. For local
	SMACOF only, this allows to recompute the free vertices in each
	local neighbourhood. When the option is set to true, then in each
	local neighbourhood we find the boundary, and then all the
	vertices inside are considered to be free. This option makes local
	neighbourhoods more "convex", and can help solve difficult
	ones. On the other hand, it increases the number of free vertices,
	which implies solving larger problems.

2014-06-22  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/tri_sphparam.m (0.4.1)

	- First version that works in a full resolution RV alpha-shape
	mesh (doing three passes with different volume constraint
	boundaries).

	- Fix local neighbourhoods. We were allowing for holes in the
	local neighbourhoods (see comments in the code for a detailed
	explanation). Now the local neighbourhoods are simply connected.

	- Put the code that computes the local neighbourhoods in an
	internal function called get_local_neighbourhood(). This makes the
	code more readable, modular and easier to debug.

	- Make the check of the radius of the intial guess points less
	strict (from 1e-10 to 1e-8 error).

2014-06-21  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/tri_sphparam.m (0.4.0)

	- Parallelize the consmacof-local method converting the for loop
	that untangles each connected component into a parfor loop.

2014-06-20  Ramon Casero  <rcasero@gmail.com>
